server/src/parser/T3ParserParser.ts
// Generated from client/src/extension/modules/parser/T3Parser.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { T3ParserListener } from "./T3ParserListener";
import { T3ParserVisitor } from "./T3ParserVisitor";


export class T3ParserParser extends Parser {
	public static readonly GRAMMAR = 1;
	public static readonly SWITCH = 2;
	public static readonly CASE = 3;
	public static readonly DEFAULT = 4;
	public static readonly FUNCTION = 5;
	public static readonly THROW = 6;
	public static readonly NEW = 7;
	public static readonly TEMPLATE = 8;
	public static readonly FOR = 9;
	public static readonly TRY = 10;
	public static readonly CATCH = 11;
	public static readonly FINALLY = 12;
	public static readonly ENUM = 13;
	public static readonly CLASS = 14;
	public static readonly TRANSIENT = 15;
	public static readonly MODIFY = 16;
	public static readonly REPLACE = 17;
	public static readonly PROPERTYSET = 18;
	public static readonly IF = 19;
	public static readonly DO = 20;
	public static readonly WHILE = 21;
	public static readonly ELSE = 22;
	public static readonly LOCAL = 23;
	public static readonly TRUE = 24;
	public static readonly NIL = 25;
	public static readonly INTRINSIC = 26;
	public static readonly INHERITED = 27;
	public static readonly DELEGATED = 28;
	public static readonly PROPERTY = 29;
	public static readonly DICTIONARY = 30;
	public static readonly EXPORT = 31;
	public static readonly EXTERN = 32;
	public static readonly RETURN = 33;
	public static readonly STATIC = 34;
	public static readonly STRING = 35;
	public static readonly FOREACH = 36;
	public static readonly IN = 37;
	public static readonly SPREAD = 38;
	public static readonly RANGE = 39;
	public static readonly STEP = 40;
	public static readonly LITERAL_NOT = 41;
	public static readonly IS = 42;
	public static readonly BREAK = 43;
	public static readonly CONTINUE = 44;
	public static readonly GOTO = 45;
	public static readonly TOKEN = 46;
	public static readonly AT = 47;
	public static readonly AMP = 48;
	public static readonly HASH = 49;
	public static readonly NOT = 50;
	public static readonly OPTIONAL = 51;
	public static readonly IFNIL = 52;
	public static readonly PLUS = 53;
	public static readonly DIV = 54;
	public static readonly MOD = 55;
	public static readonly MINUS = 56;
	public static readonly NEQ = 57;
	public static readonly EQ = 58;
	public static readonly AND = 59;
	public static readonly OR = 60;
	public static readonly ARROW = 61;
	public static readonly TILDE = 62;
	public static readonly POW = 63;
	public static readonly ID = 64;
	public static readonly ASSIGN = 65;
	public static readonly NR = 66;
	public static readonly HEX = 67;
	public static readonly OCT = 68;
	public static readonly COLON = 69;
	public static readonly COMMA = 70;
	public static readonly DOT = 71;
	public static readonly STAR = 72;
	public static readonly BITWISE_OR = 73;
	public static readonly SEMICOLON = 74;
	public static readonly LEFT_PAREN = 75;
	public static readonly RIGHT_PAREN = 76;
	public static readonly LEFT_BRACKET = 77;
	public static readonly RIGHT_BRACKET = 78;
	public static readonly DSTR = 79;
	public static readonly SSTR = 80;
	public static readonly RSTR = 81;
	public static readonly LEFT_CURLY = 82;
	public static readonly RIGHT_CURLY = 83;
	public static readonly LTEQ = 84;
	public static readonly ARITHMETIC_LEFT = 85;
	public static readonly LT = 86;
	public static readonly GTEQ = 87;
	public static readonly GT = 88;
	public static readonly ARITHMETIC_RIGHT = 89;
	public static readonly LOGICAL_RIGHT_SHIFT = 90;
	public static readonly COMMENT = 91;
	public static readonly LINE_COMMENT = 92;
	public static readonly WS = 93;
	public static readonly ANY = 94;
	public static readonly RULE_program = 0;
	public static readonly RULE_directive = 1;
	public static readonly RULE_grammarDeclaration = 2;
	public static readonly RULE_grammarRules = 3;
	public static readonly RULE_itemList = 4;
	public static readonly RULE_qualifiers = 5;
	public static readonly RULE_item = 6;
	public static readonly RULE_templateDeclaration = 7;
	public static readonly RULE_enumDeclaration = 8;
	public static readonly RULE_propertyDeclaration = 9;
	public static readonly RULE_dictionaryDeclaration = 10;
	public static readonly RULE_exportDeclaration = 11;
	public static readonly RULE_intrinsicDeclaration = 12;
	public static readonly RULE_intrinsicMethodDeclaration = 13;
	public static readonly RULE_objectDeclaration = 14;
	public static readonly RULE_templateExpr = 15;
	public static readonly RULE_array = 16;
	public static readonly RULE_curlyObjectBody = 17;
	public static readonly RULE_semiColonEndedObjectBody = 18;
	public static readonly RULE_superTypes = 19;
	public static readonly RULE_objectBody = 20;
	public static readonly RULE_property = 21;
	public static readonly RULE_dictionaryProperty = 22;
	public static readonly RULE_propertySet = 23;
	public static readonly RULE_paramsWithWildcard = 24;
	public static readonly RULE_functionDeclaration = 25;
	public static readonly RULE_functionHead = 26;
	public static readonly RULE_codeBlock = 27;
	public static readonly RULE_stats = 28;
	public static readonly RULE_gotoStatement = 29;
	public static readonly RULE_breakStatement = 30;
	public static readonly RULE_continueStatement = 31;
	public static readonly RULE_labelStatement = 32;
	public static readonly RULE_switchStatement = 33;
	public static readonly RULE_throwStatement = 34;
	public static readonly RULE_forInStatement = 35;
	public static readonly RULE_forEachStatement = 36;
	public static readonly RULE_returnStatement = 37;
	public static readonly RULE_doWhileStatement = 38;
	public static readonly RULE_whileStatement = 39;
	public static readonly RULE_forStatement = 40;
	public static readonly RULE_tryCatchStatement = 41;
	public static readonly RULE_callStatement = 42;
	public static readonly RULE_emptyStatement = 43;
	public static readonly RULE_sayStatement = 44;
	public static readonly RULE_assignmentStatement = 45;
	public static readonly RULE_ifStatement = 46;
	public static readonly RULE_enclosedExprCodeBlock = 47;
	public static readonly RULE_expr = 48;
	public static readonly RULE_primary = 49;
	public static readonly RULE_identifierAtom = 50;
	public static readonly RULE_params = 51;
	public static readonly RULE_optionallyTypedOptionalId = 52;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"program", "directive", "grammarDeclaration", "grammarRules", "itemList", 
		"qualifiers", "item", "templateDeclaration", "enumDeclaration", "propertyDeclaration", 
		"dictionaryDeclaration", "exportDeclaration", "intrinsicDeclaration", 
		"intrinsicMethodDeclaration", "objectDeclaration", "templateExpr", "array", 
		"curlyObjectBody", "semiColonEndedObjectBody", "superTypes", "objectBody", 
		"property", "dictionaryProperty", "propertySet", "paramsWithWildcard", 
		"functionDeclaration", "functionHead", "codeBlock", "stats", "gotoStatement", 
		"breakStatement", "continueStatement", "labelStatement", "switchStatement", 
		"throwStatement", "forInStatement", "forEachStatement", "returnStatement", 
		"doWhileStatement", "whileStatement", "forStatement", "tryCatchStatement", 
		"callStatement", "emptyStatement", "sayStatement", "assignmentStatement", 
		"ifStatement", "enclosedExprCodeBlock", "expr", "primary", "identifierAtom", 
		"params", "optionallyTypedOptionalId",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "'grammar'", "'switch'", "'case'", "'default'", "'function'", 
		"'throw'", "'new'", "'template'", "'for'", "'try'", "'catch'", "'finally'", 
		"'enum'", "'class'", "'transient'", "'modify'", "'replace'", "'propertyset'", 
		"'if'", "'do'", "'while'", "'else'", "'local'", "'true'", "'nil'", "'intrinsic'", 
		"'inherited'", "'delegated'", "'property'", "'dictionary'", "'export'", 
		"'extern'", "'return'", "'static'", "'string'", "'foreach'", "'in'", "'...'", 
		"'..'", "'step'", "'not'", "'is'", "'break'", "'continue'", "'goto'", 
		"'token'", "'@'", "'&'", "'#'", "'!'", "'?'", "'??'", "'+'", "'/'", "'%'", 
		"'-'", "'!='", "'=='", "'&&'", "'||'", "'->'", "'~'", "'^'", undefined, 
		"'='", undefined, undefined, undefined, "':'", "','", "'.'", "'*'", "'|'", 
		"';'", "'('", "')'", "'['", "']'", undefined, undefined, undefined, "'{'", 
		"'}'", "'<='", "'<<'", "'<'", "'>='", "'>'", "'>>'", "'>>>'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, "GRAMMAR", "SWITCH", "CASE", "DEFAULT", "FUNCTION", "THROW", 
		"NEW", "TEMPLATE", "FOR", "TRY", "CATCH", "FINALLY", "ENUM", "CLASS", 
		"TRANSIENT", "MODIFY", "REPLACE", "PROPERTYSET", "IF", "DO", "WHILE", 
		"ELSE", "LOCAL", "TRUE", "NIL", "INTRINSIC", "INHERITED", "DELEGATED", 
		"PROPERTY", "DICTIONARY", "EXPORT", "EXTERN", "RETURN", "STATIC", "STRING", 
		"FOREACH", "IN", "SPREAD", "RANGE", "STEP", "LITERAL_NOT", "IS", "BREAK", 
		"CONTINUE", "GOTO", "TOKEN", "AT", "AMP", "HASH", "NOT", "OPTIONAL", "IFNIL", 
		"PLUS", "DIV", "MOD", "MINUS", "NEQ", "EQ", "AND", "OR", "ARROW", "TILDE", 
		"POW", "ID", "ASSIGN", "NR", "HEX", "OCT", "COLON", "COMMA", "DOT", "STAR", 
		"BITWISE_OR", "SEMICOLON", "LEFT_PAREN", "RIGHT_PAREN", "LEFT_BRACKET", 
		"RIGHT_BRACKET", "DSTR", "SSTR", "RSTR", "LEFT_CURLY", "RIGHT_CURLY", 
		"LTEQ", "ARITHMETIC_LEFT", "LT", "GTEQ", "GT", "ARITHMETIC_RIGHT", "LOGICAL_RIGHT_SHIFT", 
		"COMMENT", "LINE_COMMENT", "WS", "ANY",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(T3ParserParser._LITERAL_NAMES, T3ParserParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return T3ParserParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "T3Parser.g4"; }

	// @Override
	public get ruleNames(): string[] { return T3ParserParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return T3ParserParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(T3ParserParser._ATN, this);
	}
	// @RuleVersion(0)
	public program(): ProgramContext {
		let _localctx: ProgramContext = new ProgramContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, T3ParserParser.RULE_program);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 109;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (((((_la - 1)) & ~0x1F) === 0 && ((1 << (_la - 1)) & ((1 << (T3ParserParser.GRAMMAR - 1)) | (1 << (T3ParserParser.FUNCTION - 1)) | (1 << (T3ParserParser.ENUM - 1)) | (1 << (T3ParserParser.CLASS - 1)) | (1 << (T3ParserParser.TRANSIENT - 1)) | (1 << (T3ParserParser.MODIFY - 1)) | (1 << (T3ParserParser.REPLACE - 1)) | (1 << (T3ParserParser.INTRINSIC - 1)) | (1 << (T3ParserParser.PROPERTY - 1)) | (1 << (T3ParserParser.DICTIONARY - 1)) | (1 << (T3ParserParser.EXPORT - 1)) | (1 << (T3ParserParser.EXTERN - 1)))) !== 0) || ((((_la - 34)) & ~0x1F) === 0 && ((1 << (_la - 34)) & ((1 << (T3ParserParser.STATIC - 34)) | (1 << (T3ParserParser.STRING - 34)) | (1 << (T3ParserParser.IN - 34)) | (1 << (T3ParserParser.PLUS - 34)) | (1 << (T3ParserParser.ID - 34)))) !== 0)) {
				{
				{
				this.state = 106;
				_localctx._directive = this.directive();
				_localctx._directives.push(_localctx._directive);
				}
				}
				this.state = 111;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 112;
			this.match(T3ParserParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public directive(): DirectiveContext {
		let _localctx: DirectiveContext = new DirectiveContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, T3ParserParser.RULE_directive);
		try {
			this.state = 123;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 1, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 114;
				this.enumDeclaration();
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 115;
				this.templateDeclaration();
				}
				break;

			case 3:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 116;
				this.intrinsicDeclaration();
				}
				break;

			case 4:
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 117;
				this.exportDeclaration();
				}
				break;

			case 5:
				this.enterOuterAlt(_localctx, 5);
				{
				this.state = 118;
				this.objectDeclaration();
				}
				break;

			case 6:
				this.enterOuterAlt(_localctx, 6);
				{
				this.state = 119;
				this.propertyDeclaration();
				}
				break;

			case 7:
				this.enterOuterAlt(_localctx, 7);
				{
				this.state = 120;
				this.dictionaryDeclaration();
				}
				break;

			case 8:
				this.enterOuterAlt(_localctx, 8);
				{
				this.state = 121;
				this.functionDeclaration();
				}
				break;

			case 9:
				this.enterOuterAlt(_localctx, 9);
				{
				this.state = 122;
				this.grammarDeclaration();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public grammarDeclaration(): GrammarDeclarationContext {
		let _localctx: GrammarDeclarationContext = new GrammarDeclarationContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, T3ParserParser.RULE_grammarDeclaration);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 127;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case T3ParserParser.MODIFY:
				{
				this.state = 125;
				_localctx._isModify = this.match(T3ParserParser.MODIFY);
				}
				break;
			case T3ParserParser.REPLACE:
				{
				this.state = 126;
				_localctx._isReplace = this.match(T3ParserParser.REPLACE);
				}
				break;
			case T3ParserParser.GRAMMAR:
				break;
			default:
				break;
			}
			this.state = 129;
			this.match(T3ParserParser.GRAMMAR);
			this.state = 130;
			_localctx._prodName = this.identifierAtom();
			this.state = 135;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === T3ParserParser.LEFT_PAREN) {
				{
				this.state = 131;
				this.match(T3ParserParser.LEFT_PAREN);
				this.state = 132;
				_localctx._tag = this.identifierAtom();
				this.state = 133;
				this.match(T3ParserParser.RIGHT_PAREN);
				}
			}
